--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Commons/functions.php"
         ]
     },
     "autoload-dev": {
